# alv

./: .gitignore  .sonarcloud.properties  .travis.yml  CHANGES.md  CITATION.cff  CONTRIBUTING.md  README.md  THANKS.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: alv_testing.yml
alv/: __init__.py  alignment.py  alignmentterminal.py  colorize.py  exceptions.py  get_terminal_size.py  io.py  main.py  version.py
doc/: citation.bib
doc/joss/: README.txt  nd4L.fa  nd4L.nt.fa  paper.bib  paper.md
tests/: PF00005_seed.txt  PF00005_small.fa  PF00005_small.sthlm  PF07690_seed.txt  README.md  cds.fa  conserved.fa  long_al.fa  multi.sthlm  t0.fa  t1.fa  t10.fa  t11.fa  t2.fa  t2_longaccessions.fa  t3.fa  t4.fa  t4.sthlm  t5.fa  t6.fa  t7.fa  t8.fa  t9.fa  test.nex  test_alignment.py  test_init.py  test_io.py  tmem184a_macse_AA.fasta  tmem184a_macse_NT.fasta  woodsia_chloropl_excl_hybrid.fasta
